[package]
name = "better-shell"
version = "0.3.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = [
  "cdylib",
] # Required to build a dynamic library that can be loaded by anyrun

[dependencies]
abi_stable = "0.11.3"
anyrun-plugin = "0.1.0"
ron = "0.8.1"
serde = { version = "1.0.152", features = ["derive"] }